# scripts_and_utils

./: .gitmodules  .my.vimrc  chrometheme.crx  doti3  dotmytmuxconf  dotmyvimrc  dottmux.conf  dotvimrc  install.sh  my-umatrix-rules.txt  vimium.json
doti3/: __i3  border_control  cavaconfig  cdphone  config  conky_cpu_load  conky_draw_config.lua  conky_dzen2.sh  conky_start  dotXkeymap  dotXmodmap  dotXresoures  dotconkyrc  dotmsmtprc  dotofflineimap.py  dotofflineimaprc  dotzsrhc  dump_site.sh  dzen2.sh  externOnly.sh  fonts.conf  gpu_selection_display.sh  i3blocks.conf  install.sh  invertOutputs.sh  keyboardUdevScript.sh  lock_graphic.sh  mount_desktop_home.sh  my_autoname_workspaces.py  my_i3status.sh  nmdmenuconfig.ini  password_separation.txt  play  playMusic.sh  playSong.sh  playStudyMusic.sh  playThunder.sh  prevColorScheme  random-word-generator.sh  reinstpak.sh  (+29 more)
doti3/conky/: conky_cpu_load  conky_draw_config.lua  conky_start  dotconkyrc
doti3/kb_layout_plasmoid/plugin/: CMakeLists.txt  layoutfetcher.cpp  layoutfetcher.h  plasmoidplugin.cpp  plasmoidplugin.h  qmldir
scripts/: convert_for_DVR.sh  cpphone  deptree.sh  detacher.sh  fixKeyboardRepeatRate.sh  flashMount.sh  flashUmount.sh  git_autologin.sh  gksudo  hk.sh  imgdisp.sh  index_fuss.sh  obfuscate.sh  playMusic.sh  playSong.sh  prepKeyboard.sh  random-word-generator.sh  setWallpaper.sh  set_wacom.sh  showClock.sh  shrink_pdf.sh  ssh-add-identity.sh  ssss_combine_lines.sh  startTickeys.sh  swapSink.sh  sync_password.sh  toggle_keyboard_layout.sh  tunnel.sh  uhk_fuss.sh  vpnNord.sh  wtf.sh  x360csetup
(+296 files in other folders)
